--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -53,3 +53,15 @@ Perform the following steps to transfer the `bbr` binary to your jumpbox:
 	$ wget BBR\_RELEASE\_URL
 	$ chmod a+x bbr
 	</pre>
+
+##<a id="advice"></a>  Advice for Operators
+
+You must place the `bbr` binary on a jumpbox that is able to communicate with 
+the network that your BOSH deployment is on, and that has sufficient storage to house 
+the backups you intend to keep on it. For instance, a PCF backup will be at least 1.5GB in size.
+
+We recommend that you make redundant copies of your backups and that you store 
+them in multiple locations in order to minimize the risk of losing your backups in the event of a disaster.
+
+We also recommend that you attempt a test restore on every backup 
+that you make in order to validate that the backup can be restored from.
