--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -42,7 +42,7 @@ Consult the following table for more information about the network access permis
 
 Perform the following steps to transfer the `bbr` binary to your jumpbox:
 
-1. Download the [latest BBR release](https://github.com/pivotal-cf/bosh-backup-and-restore/releases/).
+1. Download the [latest BBR release](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases).
 1. Change the permissions of `bbr` in order to make it executable:
 	<pre class="terminal">$ chmod a+x bbr</pre>
 1. SCP the binary to your jumpbox:
@@ -58,7 +58,7 @@ Perform the following steps to transfer the `bbr` binary to your jumpbox:
 
 You must place the `bbr` binary on a jumpbox that is able to communicate with 
 the network that your BOSH deployment is on, and that has sufficient storage to house 
-the backups you intend to keep on it. For instance, a PCF backup will be at least 1.5GB in size.
+the backups you intend to keep on it. For instance, a CF backup can be at least 1.5GB in size.
 
 We recommend that you make redundant copies of your backups and that you store 
 them in multiple locations in order to minimize the risk of losing your backups in the event of a disaster.
