--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -33,7 +33,7 @@ BBR supports BOSH directors which use one of the following:
 * Basic Auth
 * Client/Client-Secret UAA Authentication
 
-## <a id='contract'></a>BBR Contract
+## <a id='contract'></a>Contract
 
 BBR sets out a contract with BOSH release authors, to call specific backup and restore scripts in a specific order.
 
@@ -68,5 +68,75 @@ The following diagram shows a sample backup flow.
 
 <%= image_tag('backup-flow.png') %>
 
+## <a id='syntax'></a>Syntax
 
+This section provides syntax information for the BBR binary. For detailed procedures on how to use BBR to back up and restore a BOSH Director or BOSH deployment, see the [Backing Up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html) topics.
 
+The syntax for the BBR binary is:
+
+``` bash
+bbr [command] [arguments...] [subcommand]
+```
+
+The options for `[command]` are:
+
+* `deployment`: Specifies that the target of BBR is a BOSH deployment
+* `director`: Specifies that the target of BBR is a BOSH Director
+* `help`: Prints help text
+* `version`: Prints the version of the `bbr` binary
+
+The `[arguments]` are specific to the command.
+
+### BOSH Director
+
+The arguments to specify when running BBR for a BOSH Director are:
+
+```bash
+$ bbr director \
+  --debug (OPTIONAL) \
+  --private-key-path PATH_TO_PRIVATE_KEY \
+  --username USER_NAME \
+  --host HOST \
+  SUB-COMMAND [--artifact-path PATH_TO_ARTIFACT_TO_RESTORE]
+ ```
+
+The parameters are:
+
+* `--debug`: This is an optional flag to display debug output.
+* `--private-key-path`: This is the path to the SSH private key used to connect to the BOSH Director.
+* `--username`: This is the SSH username of the BOSH Director.
+* `--host`: This is the address of the BOSH Director, with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
+* `--artifact-path`: This is the path to the BOSH Director backup you want to restore.
+
+### BOSH Deployment
+
+The arguments to specify when running BBR for a BOSH deployment are:
+
+```bash
+$ BOSH_CLIENT_SECRET=BOSH_CLIENT_SECRET \
+  bbr deployment \
+  --debug (OPTIONAL)
+  --target BOSH_TARGET \
+  --username BOSH_CLIENT \
+  --deployment DEPLOYMENT_NAME \
+  --ca-cert PATH_TO_BOSH_SERVER_CERTIFICATE \
+    SUB-COMMAND [--artifact-path PATH_TO_ARTIFACT_TO_RESTORE]
+```
+
+The arguments are:
+
+* `--debug`: This is an optional flag to display debug output.
+* `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the user name and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your user name and password.
+* `--target`: This is the FQDN or IP address of your BOSH Director.
+* `--deployment`: This is the name of the deployment you want to back up. For a list of deployments, run `bosh deployments`.
+* `--ca-cert`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate, if the certificate is not verifiable by the local machine’s certificate chain.  
+* `--artifact-path`: This is the path to the BOSH deployment backup you want to restore.
+
+### Subcommands
+
+BBR supports four subcommands:
+
+* `backup`
+* `restore`
+* `pre-backup-check`
+* `backup-cleanup`
