--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -12,7 +12,7 @@ You install the `bbr` binary on a jumpbox, and then run `bbr` from the jumpbox t
 Set up your jumpbox with the following settings:
 
 * The jumpbox must be able to communicate with the network that contains your BOSH deployment.
-* The jumpbox must have sufficient space for the backup. For instance, a Cloud Foundry backup can be at least 1.5 GB in size.
+* The jumpbox must have sufficient space for the backup. <%= vars.bbr_space %>
 * BBR connects to the VMs at their private IP address, so the jumpbox needs to be in the same network as the deployed VMs. BBR does not support SSH gateways.
 * BBR copies the backed-up data from the VMs to the jumpbox, so ensure you have minimal network latency between them to reduce transfer times.
 
