--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -7,15 +7,16 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
-### <a id='1.0-beta4'></a> 1.0 Beta 4
+### <a id='1.0'></a> 1.0 
 
-**Release Date**: June 13, 2017
+**Release Date**: August 7, 2017
 
 <%= vars.bbr_rn_compatibility %>
 
 #### Features
 
-* Support for killing backups via CTRL-C and for a new backup-cleanup to clean up after a killed backup
+* BBR v1.0 enables backup and restore of BOSH Deployments and BOSH Directors. BBR uses backup and restore functionality that is packaged in the BOSH Deployment or Director; this functionality is present in PCF1.11+. Steps for backing up PCF1.11 can be found [here](https://docs.pivotal.io/pivotalcf/1-11/customizing/backup-restore/backup-pcf-bbr.html) and restoring [here]https://docs.pivotal.io/pivotalcf/1-11/customizing/backup-restore/restore-pcf-bbr.html. 
+
 
 #### Bug Fixes
 
