Took out pcf-related content

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -3,20 +3,16 @@ title: BOSH Backup and Restore Release Notes
 owner: Release Engineering
 ---
 
-<%= vars.bbr_rn_intro %>
-
 ## <a id='releases'></a> Releases
 
 ### <a id='1.0'></a> 1.0 
 
 **Release Date**: August 7, 2017
 
-<%= vars.bbr_rn_compatibility %>
-
 #### Features
 
-* BBR v1.0 enables backup and restore of BOSH Deployments and BOSH Directors. BBR uses backup and restore functionality that is packaged in the BOSH Deployment or Director; this functionality is present in PCF1.11+. Steps for backing up PCF1.11 can be found [here](https://docs.pivotal.io/pivotalcf/1-11/customizing/backup-restore/backup-pcf-bbr.html) and restoring [here]https://docs.pivotal.io/pivotalcf/1-11/customizing/backup-restore/restore-pcf-bbr.html. 
-
+* BBR v1.0 enables backup and restore of BOSH Deployments and BOSH Directors. 
+BBR uses backup and restore functionality that is packaged in the BOSH Deployment or Director. 
 
 #### Bug Fixes
 
