--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -5,9 +5,27 @@ owner: BBR
 
 This topic describes how to use BOSH Backup and Restore (BBR) to restore a BOSH deployment or BOSH Director.
 
-To back up a BOSH deployment or BOSH Director with BBR, see the [Backing Up with BOSH Backup and Restore](backup.html) topic.
+To back up a BOSH deployment or BOSH Director with BBR, see the [Backing Up with BOSH Backup and Restore](backup.html) topic. 
 
-Perform the steps below to restore a BOSH Director, a BOSH deployment, or both.
+The steps in this topic allow you to restore a BOSH Director, a BOSH deployment, or both.
+
+## <a id="compatibility"></a> Compatibility of Restore
+
+This section describes the restrictions for a backup artifact to be restorable to another environment. 
+This section is for guidance only, and it is highly recommended that operators validate their backups by 
+using the backup artifacts in a restore. 
+
+BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment. 
+For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names. 
+For instance groups/jobs that have backup and restore scripts, there must be the same number of instances. 
+
+A change in VM size or underlying hardware should not affect BBR’s ability to restore data, 
+as long as there is adequate storage space to restore the data. 
+
+BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment, 
+but can’t validate the restore beyond that. 
+For example, if MySQL encryption key is different in the restore environment, 
+the BBR restore could succeed while the restored MySQL could be unusable. 
 
 ## <a id="recreate-vms"></a> Step 1: Recreate VMs
 
