adds xref to compatibility

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -9,6 +9,10 @@ To restore a BOSH deployment or BOSH Director with BBR, see the [Restoring with 
 
 Perform the steps below to back up a [BOSH Director](#back-up-director), a [BOSH deployment](#back-up-deployment), or both.
 
+## <a id="restore-compatibility"></a> Compatibility of Restore
+
+When using a backup to restore, you must make sure that the restore environment is compatible. For information, see [Compatibility of Restore](./restore.html#compatibility).
+
 ## <a id='prereqs'></a> Prerequisites
 
 To enable your BOSH deployment to be backed up and restored, the deployment must adhere to the BBR contract. <%= vars.bbr_pcf2 %>
