--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -12,7 +12,7 @@ The steps in this topic allow you to restore a BOSH Director, a BOSH deployment,
 ## <a id="compatibility"></a> Compatibility of Restore
 
 This section describes the restrictions for a backup artifact to be restorable to another environment. 
-This section is for guidance only, and it is highly recommended that operators validate their backups by 
+This section is for guidance only, and Pivotal highly recommends that operators validate their backups by 
 using the backup artifacts in a restore. 
 
 BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment. 
