--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -15,17 +15,18 @@ This section describes the restrictions for a backup artifact to be restorable t
 This section is for guidance only, and Pivotal highly recommends that operators validate their backups by 
 using the backup artifacts in a restore. 
 
-BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment. 
-For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names. 
-For instance groups/jobs that have backup and restore scripts, there must be the same number of instances. 
+The restrictions for a backup artifact to be restorable are the following:
 
-A change in VM size or underlying hardware should not affect BBR’s ability to restore data, 
-as long as there is adequate storage space to restore the data. 
++ **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment. 
++ **Naming of instance groups and jobs**: For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names. 
++ **Number of instance groups and jobs**: For instance groups and jobs that have backup and restore scripts, there must be the same number of instances. 
++ **Limited validation**: BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment, 
+    but can’t validate the restore beyond that. 
+    For example, if the MySQL encryption key is different in the restore environment, 
+    the BBR restore might succeed although the restored MySQL database is unusable. 
 
-BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment, 
-but can’t validate the restore beyond that. 
-For example, if MySQL encryption key is different in the restore environment, 
-the BBR restore could succeed while the restored MySQL could be unusable. 
+<p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect BBR’s ability to restore data, 
+as long as there is adequate storage space to restore the data. </p> 
 
 ## <a id="recreate-vms"></a> Step 1: Recreate VMs
 
