Remove extraneous comma and repeated `specific`

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -35,7 +35,7 @@ BBR supports BOSH directors which use one of the following:
 
 ## <a id='contract'></a>Contract
 
-BBR sets out a contract with BOSH release authors, to call specific backup and restore scripts in a specific order.
+BBR sets out a contract with BOSH release authors to call designated backup and restore scripts in a specific order.
 
 This approach has the following advantages:
 
