Use initial caps for titles

--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -11,7 +11,7 @@ BBR is a framework for backing up and restoring BOSH deployments and BOSH direct
 
 BBR sets out a contract with release authors, to call specific backup and restore scripts in a specific order:
 
-### <a id="backup-scripts"></a>Backup scripts
+### <a id="backup-scripts"></a>Backup Scripts
 * pre-backup-lock
 
 * backup
