--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -5,11 +5,11 @@ owner: BOSH Backup & Restore Team
 
 ## <a id="overview"></a> Overview
 
-This guide describes the framework for release authors to add backup and restore functionality to their release, using BOSH Backup and Restore (BBR).
+This guide describes the framework for release authors to add backup and restore functionality to their release by using BOSH Backup and Restore (BBR).
 
-BBR is a framework for backing up and restoring BOSH deployments and BOSH directors. It orchestrates triggering the backup or restore process on the deployment or director, and transfers the backup artifacts to and from the deployment or director.
+BBR is a framework for backing up and restoring BOSH deployments and BOSH Directors. BBR triggers the backup or restore process on the deployment or BOSH Director and transfers the backup artifacts to and from the deployment or BOSH Director.
 
-BBR sets out a contract with release authors, to call specific backup and restore scripts in a specific order:
+BBR sets out a contract with release authors to call designated backup and restore scripts in a specific order:
 
 ### <a id="backup-scripts"></a>Backup Scripts
 * pre-backup-lock
@@ -25,24 +25,24 @@ BBR sets out a contract with release authors, to call specific backup and restor
 
 * post-restore-unlock
 
-The BBR framework consists of a command line interface (CLI) and a set of hooks, which call out to scripts. The framework uses BOSH to orchestrate the execution of backup and restore scripts. BBR allows release authors fine grained control over how their release is backed up.
+The BBR framework consists of a command line interface (CLI) and a set of hooks, which call out to scripts. The framework uses BOSH to orchestrate the execution of backup and restore scripts. BBR allows release authors fine-grained control over how their release is backed up.
 
 ### <a id="mechanism"></a> Backup Mechanism
 
-Different systems require different strategies for backup and restore. To help release authors make consistent backups of their systems, the BBR Framework provides hooks with which lock scripts can be run so a job can be brought to a consistent state before backup begins.
+Different systems require different strategies for backup and restore. To help release authors make consistent backups of their systems, the BBR framework provides hooks to lock scripts that bring a job to a consistent state before backup begins.
 
 The following diagram illustrates an example BBR script execution sequence.
 
 ![Script execution order](images/script-execution-order.png)
 
-Since the framework is focused on the interface, hooks, backup destination, and intra deployment orchestration, it is mechanism-agnostic. That is, release authors can choose to backup their release however they would like, as long as the scripts they write have the correct name and directory structure.
+Since the framework is focused on the interface, hooks, backup destination, and intra-deployment orchestration, it is mechanism-agnostic. Release authors can choose to back up their release however they would like, as long as the scripts they write have the correct name and directory structure.
 
-To ensure that that backup and restore scripts do not get out of sync with the releases themselves, release authors are responsible for naming, creating, testing, and troubleshooting their own backup and restore scripts.
+To ensure that backup and restore scripts do not get out of sync with the releases themselves, release authors are responsible for naming, creating, testing, and troubleshooting their own backup and restore scripts.
 
 <p class="note"><strong>Important</strong>: Release authors must ensure the following.<br><br>
     <strong>For all releases</strong>---Be aware of the possibility that these backup and restore jobs may be collocated with those of other releases. Therefore, give these jobs unique and descriptive names to avoid name collisions.
 
-    <br><br><strong>For CF Releases</strong>---Your scripts must respect the <code>release_level_backup</code> job property and run it if set to <code>true</code>, but do nothing if set to <code>false</code>.
+    <br><br><strong>For CF Releases</strong>---Your scripts must respect the <code>release_level_backup</code> job property so the scripts run if set to <code>true</code>, but do nothing if set to <code>false</code>.
 </p>
 
 ## <a id='backup-workflow'></a>Backup Workflow
@@ -54,8 +54,7 @@ Release authors must implement scripts as part of the BBR contract. The scripts 
 
 The `pre-backup-lock`, `backup`, `post-backup-unlock`, and `restore` scripts are executable scripts. ERB tags may be used for templating. These scripts are executed similarly to other release job scripts (`start`, `stop`, `drain`), and you can use the job's package dependencies.
 
-BBR checks exit codes of the scripts when orchestrating. Exit code `0` indicates success, while any other exit code indicates a failure.
-
+BBR checks exit codes of the scripts when orchestrating. Exit code `0` indicates success while any other exit code indicates a failure.
 
 #### Directory Structure
 
@@ -102,7 +101,7 @@ The `stdout` and `stderr` streams are captured and sent to the operator invoking
 
 The release job can have a `pre-backup-lock` script that stops any processes that could make changes to the components being backed up. This script must allow the job to lock so that backups are consistent across a cluster.
 
-For example, in a Cloud Foundry deployment, the `pre-backup-lock` script stops Cloud Controller processes that may make changes to its blobstore and database, thus making sure the blobstore and the Cloud Controller database are consistent with each other.
+For example, in a Cloud Foundry deployment, the `pre-backup-lock` script stops Cloud Controller processes that may make changes to its blobstore and database thus ensuring the blobstore and the Cloud Controller database are consistent with each other.
 
 #### Job Configuration
 
@@ -113,7 +112,7 @@ To add a `pre-backup-lock` script to a job, do the following:
 Create a script with any name in the templates directory of your job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/pre-backup-lock</code> as a key-value pair, as shown in the example below:
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/pre-backup-lock</code> as a key-value pair. For example:
 <pre class="terminal">
 ---
 name: lock-unlock-acme
@@ -126,7 +125,7 @@ templates:
 If you want your <code>bin/bbr/pre-backup-lock</code> scripts to run in a specific order, define that order using the optional metadata script. In the sample directory structure illustrated above, this script is called <code>metadata.sh.erb</code>.<br><br>
 
     a. The metadata script specifies that the current job must be locked before some other job(s) in the deployment.
-       When run, this script must print a YAML file to stdout, following this example:
+       When run, this script must print a YAML file to stdout. For example:
 
 <pre class="terminal">
 #!/usr/bin/env bash
@@ -153,7 +152,7 @@ The `pre-backup-lock` script is called before the backup scripts are called on a
 
 ### <a id='backup'></a>Backup
 
-The release job can have a backup script that will dump the backup of the job's database to the directory specified by `$BBR_ARTIFACT_DIRECTORY`. For example, when backing up MySQL, this script can invoke the `mysqldump` binary for the MySQL adapter.
+The release job can have a backup script that dumps the backup of the job's database to the directory specified by `$BBR_ARTIFACT_DIRECTORY`. For example, when backing up MySQL, this script can invoke the `mysqldump` binary for the MySQL adapter.
 
 There must be at least one job in the deployment providing a backup script. If there isn't a backup script, calling `backup` or `pre-backup-check` for the deployment will fail.
 
@@ -166,7 +165,7 @@ To add a `backup` script to a release job:
 Create a script with any name in the templates directory of a release job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/backup</code> as a key-value pair, as shown in the example below:
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/backup</code> as a key-value pair. For example:
 </li>
 </ol>
 
@@ -180,13 +179,13 @@ templates:
 
 #### Script Ordering
 
-The `backup` script is called after all of the `pre-backup-lock` scripts have exited successfully across all jobs of the deployment. A single failed `pre-backup-lock` script  halts the backup-restore process and runs the corresponding `post-backup-unlock` scripts. Success indicates the job successfully backed up.
+The `backup` script is called after all of the `pre-backup-lock` scripts have exited successfully across all jobs of the deployment. A single failed `pre-backup-lock` script halts the backup-restore process and runs the corresponding `post-backup-unlock` scripts. Success indicates the job successfully backed up.
 
 The `backup` script is called before any of the `post-backup-unlock` scripts are called on any jobs in the deployment. The `backup` scripts may be called in any order across the jobs in a deployment.
 
 ### <a id='post-backup-unlock'></a>Post-Backup-Unlock
 
-The the backup and restore job can have a `post-backup-unlock` script that will undo the operations done by `pre-backup-lock`.
+The backup and restore job can have a `post-backup-unlock` script that will undo the operations done by `pre-backup-lock`.
 
 #### Job Configuration
 
@@ -197,7 +196,7 @@ To add a `post-backup-unlock` script to a release job:
 Create a script with any name in the templates directory of a release job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/post-backup-unlock</code> as a key-value pair, as shown in the example below:
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/post-backup-unlock</code> as a key-value pair. For example: 
 </li>
 </ol>
 
@@ -240,7 +239,7 @@ A normal workflow for backing up a deployment does the following:
 
 ### <a id='pre-restore-lock'></a>Pre-Restore-Lock
 
-The release job can have a `pre-restore-lock` script that stops any processes that could make changes to the components being restored.
+The release job can have a `pre-restore-lock` script that stops any processes capable of making changes to the components being restored.
 
 #### Job Configuration
 
@@ -251,7 +250,7 @@ To add a `pre-restore-lock` script to a release, do the following:
 Create a script with any name in the templates directory of your job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/pre-restore-lock</code> as a key-value pair, as shown in the example below:
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/pre-restore-lock</code> as a key-value pair. For example:
 <pre class="terminal">
 ---
 name: lock-unlock-acme
@@ -278,7 +277,7 @@ To add a `restore` script to a release job:
 Create a script with any name in the templates directory of a release job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/restore</code> as a key-value pair, as shown in the example below:
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/restore</code> as a key-value pair. For example:
 </li>
 </ol>
 
@@ -296,7 +295,7 @@ The `restore` scripts are called after all `pre-restore-lock` scripts have exite
 
 ### <a id='post-restore-unlock'></a>Post-Restore-Unlock
 
-The release job can have a `post-restore-unlock` script that resumes normal service operation. `post-restore-unlock` should be idempotent, has it can be called multiple times, even if `pre-restore-lock` has not been not called.
+The release job can have a `post-restore-unlock` script that resumes normal service operation. `post-restore-unlock` should be idempotent since it can be called multiple times even if `pre-restore-lock` has not been not called.
 
 #### Job Configuration
 
@@ -307,7 +306,7 @@ To add a `post-restore-unlock` script to a release, do the following:
 Create a script with any name in the templates directory of your job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/post-restore-unlock</code> as a key-value pair, as shown in the example below:
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/post-restore-unlock</code> as a key-value pair. For example:
 <pre class="terminal">
 ---
 name: lock-unlock-acme
@@ -319,7 +318,7 @@ templates:
 
 #### Script Ordering
 
-The `post-restore-unlock` scripts are called after all `restore` scripts have been called. This script will also be invoked if the `restore` or `pre-restore-lock` fail. It can also be invoked by the operator to do cleanup, even when restore was not called. Success indicates the job has resumed normal operations.
+The `post-restore-unlock` scripts are called after all `restore` scripts have been called. These scripts are also invoked if the `restore` or `pre-restore-lock` scripts fail. You can also invoke them to do cleanup even when restore was not called. Success indicates the job has resumed normal operations.
 
 ## <a id='testing'></a>Testing
 The functional testing pattern recommended for BBR scripts is:
@@ -342,8 +341,7 @@ Validate that restored data are correct.
 </li>
 </ol>
 
-Where scripts are implemented for releases that are part of larger deployments, we recommend end-to-end testing that validates consistency across releases.
-
+Where scripts are implemented for releases that are part of larger deployments, you should perform end-to-end testing that validates consistency across releases.
 
 ## <a id="bbr-utilities"></a>Backup and Restore Utilities
 
@@ -382,17 +380,17 @@ cp $ARTIFACT_DIRECTORY <output_file>
 
 ## <a id="bbr-cf"></a>BBR and Cloud Foundry Databases
 
-BBR provides a pattern for Cloud Foundry release authors to follow to ensure their scripts abide by the BBR Framework contract.
+BBR provides a pattern for Cloud Foundry release authors that ensures their scripts abide by the BBR Framework contract.
 
 A Cloud Foundry operator adds a `backup-restore` instance to their Cloud Foundry deployment. By default, release-specific database `backup` and `restore` job scripts are collocated on this instance along with the `database-backup-restorer` job from the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release) GitHub repository.
 
-If your release requires that you stop your component's processes during backup and restore, you will also need to provide [`unlock`](#post-backup-unlock) and [`lock`](#pre-backup-lock) scripts. You may collocate these scripts on either the `backup-restore` instance or your component's instance, but we recommend the latter in order to be able to directly interact with `monit` or your running job.
+If your release requires that you stop your component's processes during backup and restore, you also need to provide [`unlock`](#post-backup-unlock) and [`lock`](#pre-backup-lock) scripts. You may collocate these scripts on either the `backup-restore` instance or your component's instance. You should collocate these scripts on the component's instance if you want to interact directly with `monit` or your running job.
 
 ### <a id="bbr-cf-example"></a>Example
 
 Acme Release is a Cloud Foundry component that has no persistent disk on its component VM. The release is an API that stores its data in a MySQL database deployed on a different instance group in this CF deployment.
 
-The release authors have chosen to create two new jobs to be incorporated into their existing release, where one job includes the `backup` and `restore` scripts in its templates directory, and the other job includes the `pre-backup-lock` and `post-backup-unlock` scripts. This is because the operator will collocate the former job on the `backup-restore` VM, and the latter job on the Acme Release VM.
+The release authors have chosen to create two new jobs to be incorporated into their existing release;  one job includes the `backup` and `restore` scripts in its templates directory, and the other job includes the `pre-backup-lock` and `post-backup-unlock` scripts. This is because the operator will collocate the former job on the `backup-restore` VM and the latter job on the Acme Release VM.
 
 Here is how the backup and restore job should be placed:
 
@@ -429,7 +427,7 @@ Multiple backup and restore scripts will be collocated on the `backup-restore` i
 
 ## <a id='drats'></a>Acceptance Tests
 
-The **Disaster Recovery Acceptance Test Suite** (DRATS) runs against a Cloud Foundry deployment to ensure that backup and restore works as expected. Specifically, it adds state to a Cloud Foundry deployment, for example when pushing an app. DRATS backs up the deployment, restores from the backup, and asserts that the state is present after restore.
+The **Disaster Recovery Acceptance Test Suite** (DRATS) runs against a Cloud Foundry deployment to ensure that backup and restore works as expected. Specifically, DRATS adds state to a Cloud Foundry deployment by testing backup and restore during a CF operation such as pushing an app. DRATS backs up the deployment, restores from the backup, and asserts that the state is present after restore.
 
 To add extra test cases, create a new TestCase that implements the [TestCase interface](https://github.com/cloudfoundry-incubator/disaster-recovery-acceptance-tests/tree/master/testcases).
 
