Add restore cleanup details
[#148732575]

Signed-off-by: Chunyi Lyu <clyu@pivotal.io>

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -180,12 +180,12 @@ $ bbr director \
 To clean up after a failed BOSH deployment backup, run the following command:
 
 <pre class="terminal">
-$ BOSH\_CLIENT\_SECRET=BOSH\_CLIENT\_SECRET \
+$ BOSH_CLIENT_SECRET=BOSH_CLIENT_SECRET \
     bbr deployment \
-    --target BOSH\_TARGET \
-    --username BOSH\_CLIENT \
-    --deployment DEPLOYMENT\_NAME \
-    --ca-cert PATH\_TO\_BOSH\_SERVER\_CERT \
+    --target BOSH_TARGET \
+    --username BOSH_CLIENT \
+    --deployment DEPLOYMENT_NAME \
+    --ca-cert PATH_TO_BOSH_SERVER_CERT \
     backup-cleanup
 </pre>
 
