--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -129,14 +129,15 @@ The arguments are:
 * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the user name and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your user name and password.
 * `--target`: This is the FQDN or IP address of your BOSH Director.
 * `--deployment`: This is the name of the deployment you want to back up. For a list of deployments, run `bosh deployments`.
-* `--ca-cert`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate, if the certificate is not verifiable by the local machine’s certificate chain.  
+* `--ca-cert`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate, if the certificate is not verifiable by the local machine’s certificate chain.
 * `--artifact-path`: This is the path to the BOSH deployment backup you want to restore.
 
 ### Subcommands
 
-BBR supports four subcommands:
+BBR supports five subcommands:
 
 * `backup`
 * `restore`
 * `pre-backup-check`
 * `backup-cleanup`
+* `restore-cleanup`
