--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -131,7 +131,7 @@ If you want your <code>bin/bbr/pre-backup-lock</code> scripts to run in a specif
 #!/usr/bin/env bash
 
 echo "---
-should_be_locked_before:
+backup_should_be_locked_before:
 - job_name: lock-unlock-acme
   release: acme-release" </pre>
 
@@ -143,6 +143,17 @@ templates:
 </li>
 
 </pre>
+
+<li>
+If you want your <code>bin/bbr/pre-restore-lock</code> scripts to run in a specific order, define that order using the optional metadata script as above with the <code>restore_should_be_locked_before</code> key. For example:
+
+<pre class="terminal">
+#!/usr/bin/env bash
+
+echo "---
+restore_should_be_locked_before:
+- job_name: lock-unlock-acme
+  release: acme-release" </pre>
 </ol>
 
 
@@ -196,7 +207,7 @@ To add a `post-backup-unlock` script to a release job:
 Create a script with any name in the templates directory of a release job.
 </li>
 <li>
-In the templates section of the release job spec file, add the script name and <code>bin/bbr/post-backup-unlock</code> as a key-value pair. For example: 
+In the templates section of the release job spec file, add the script name and <code>bin/bbr/post-backup-unlock</code> as a key-value pair. For example:
 </li>
 </ol>
 
