--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -145,7 +145,9 @@ templates:
 </pre>
 
 <li>
-If you want your <code>bin/bbr/pre-restore-lock</code> scripts to run in a specific order, define that order using the optional metadata script as above with the <code>restore_should_be_locked_before</code> key. For example:
+If you want your <code>bin/bbr/pre-restore-lock</code> scripts to run in a specific order, 
+    define that order using the optional metadata script as in the above step, 
+    but with the <code>restore_should_be_locked_before</code> key. For example:
 
 <pre class="terminal">
 #!/usr/bin/env bash
