--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,23 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.0'></a> 1.1
+
+**Release Date**: September 26, 2017
+
+#### Features
+
+* BBR v1.1 adds support for BOSH Deployments and Directors locking deployments during the restore process and declaring the order that locking is done.
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
+
 ### <a id='1.0'></a> 1.0 
 
 **Release Date**: August 7, 2017
